# aria-voice

./: .gitignore  ARIA-v3-native-spec.md  BUILD_SPEC.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  INTEGRITY.md  LICENSE  NEXT-PROMPT.md  RALPH_ORB_FIXES.md  RALPH_PROGRESS.md  RALPH_TASK.md  README.md  SECURITY.md  electron-builder.yml  eslint.config.mjs  index.html  package-lock.json  package.json  tsconfig.json
.cargo/: config.toml
.claude/: ralph-loop.local.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: release.yml
apps/aria/: Cargo.toml
apps/aria/src/: hardware.rs  main.rs  router.rs  runtime.rs  screen.rs  updater.rs
apps/aria/tests/: golden.rs
assets/: deb-after-install.sh  deb-update-installer.sh
collaboration/: README.md  architecture.md  conventions.md  gotchas.md  ipc-contract.md
crates/aria-audio/: Cargo.toml
crates/aria-core/: Cargo.toml
crates/aria-llm/: Cargo.toml
crates/aria-llm/src/: lib.rs
crates/aria-orb/: Cargo.toml
crates/aria-stt/: Cargo.toml
crates/aria-stt/src/: lib.rs
crates/aria-tts/: Cargo.toml
crates/aria-ui/: Cargo.toml
crates/aria-wake/: Cargo.toml
docs/: cross-platform-hardening.md
packaging/: aria-voice.desktop
ralph/: BACKLOG.md  STATE.md
scripts/: build-whispercpp.sh  copy-renderer.js  download-models.sh  gen-test-audio.sh  launch.sh  merge-mac-update-metadata.js  package-sidecar.sh  package-sidecars.sh  perf-baseline.js  perf-live.js  perf-llm-path.js  set-harness-key.js  smoke-audio.js  smoke-core-security.js  smoke-delegate.js  smoke-e2e.js  smoke-hardware.js  smoke-hover.js  smoke-llm-models.js  smoke-llm.js  smoke-local-intents.js  smoke-local-llm.js  smoke-memory.js  smoke-menu.js  smoke-mic-lifecycle.js  smoke-models.js  smoke-onboarding-llm.js  smoke-orb.js  smoke-pdeathsig.js  smoke-perf-panel.js  smoke-release-packaging.js  smoke-release-whisper.js  smoke-resilience.js  smoke-router.js  smoke-routing-invariant.js  smoke-screenshare.js  smoke-session-features.js  smoke-settings-live.js  smoke-sidecar-lifecycle.py  smoke-status-dots.js  (+15 more)
sidecars/shared/: base_sidecar.py
sidecars/stt/: main.py
sidecars/tts/: main.py  requirements.txt
sidecars/wakeword/: main.py  requirements.txt
src/main/: config.ts  coordinator.ts  endpoint-security.ts  hardware.ts  harness-detect.ts  index.ts  json-store.ts  llm-client.ts  llm-models.ts  llm-stream.ts  local-intents.ts  model-manager.ts  perf.ts  router.ts  secure-storage.ts  sessions.ts  stt-turn.ts  supervisor.ts  timers.ts  tunnel-args.ts  tunnel-supervisor.ts  (+2 more)
(+24 files in other folders)
