[package]
name = "aria"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
aria-core = { path = "../../crates/aria-core" }
aria-audio = { path = "../../crates/aria-audio" }
aria-wake = { path = "../../crates/aria-wake" }
aria-stt = { path = "../../crates/aria-stt", features = ["vulkan"] }
aria-tts = { path = "../../crates/aria-tts" }
aria-llm = { path = "../../crates/aria-llm" }
aria-orb = { path = "../../crates/aria-orb" }
aria-ui = { path = "../../crates/aria-ui" }
toml = { workspace = true }
serde_json = "1"
ureq = { version = "3", features = ["json"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
zbus = { version = "5", default-features = false, features = ["blocking-api"] }
base64 = "0.22"

[dev-dependencies]
hound = "3"

# M5 packaging: `cargo deb -p aria` builds the .deb (CI does this on release).
[package.metadata.deb]
name = "aria-voice"
extended-description = "Local-first voice assistant with a native glass UI, wake word, Whisper STT, Kokoro TTS, and agent-harness integration."
depends = "libasound2, libc6"
assets = [
    ["target/release/aria", "usr/bin/aria", "755"],
    ["../../packaging/aria-voice.desktop", "usr/share/applications/aria-voice.desktop", "644"],
    ["../../packaging/aria-voice.svg", "usr/share/icons/hicolor/scalable/apps/aria-voice.svg", "644"],
]
