[package]
name = "aria-llm"
version = "0.1.0"
edition = "2021"

[dependencies]
aria-core = { path = "../aria-core" }
# ureq is already in the workspace tree via ort; no tokio/reqwest needed for
# a blocking worker-thread client (spec §5.1 — LLM runs off the async pool
# anyway; ponytail: swap to reqwest+tokio only if we ever need HTTP/2).
ureq = { version = "3", features = ["json"] }
serde = { workspace = true }
serde_json = "1"
thiserror = { workspace = true }
